2015-05-29  Zalan Bujtas  <zalan@apple.com>

        Unreviewed Win and GTK gardening.

        Skip Mac font specific test.

        * platform/gtk/TestExpectations:
        * platform/win/TestExpectations:

2015-05-29  Youenn Fablet  <youenn.fablet@crf.canon.fr>

        MediaDevices.getUserMedia should reject promise instead of throwing exceptions
        https://bugs.webkit.org/show_bug.cgi?id=145282

        Reviewed by Darin Adler.

        Updating test to expect rejection and not error throwing.

        * fast/mediastream/MediaDevices-getUserMedia-expected.txt:
        * fast/mediastream/MediaDevices-getUserMedia.html:

2015-05-28  Gyuyoung Kim  <gyuyoung.kim@webkit.org>

        [EFL] Unreviewed gardening on 29th May

        Unskip passing tests for viewport-percentage, text, sub-pixel
        and update new failing accessibility, fast/overflow and so on.

        * platform/efl/TestExpectations:

2015-05-28  Zalan Bujtas  <zalan@apple.com>

        Subpixel rendering: Pixel crack in text selection of simple text in <textarea>.
        https://bugs.webkit.org/show_bug.cgi?id=145393
        rdar://problem/19918941

        Reviewed by Darin Adler.

        Float to LayoutUnit conversion is lossy. To ensure that selection
        painting always lines up (snaps) properly, the calculated width needs to
        be adjusted by ceiling the float to the next LayoutUnit value.

        * fast/text/hidpi-text-selection-gap-between-words-expected.html: Added.
        * fast/text/hidpi-text-selection-gap-between-words.html: Added.
        * platform/mac/platform/mac/editing/input/caret-primary-bidi-expected.txt:

2015-05-28  Andreas Kling  <akling@apple.com>

        GraphicsLayerCA should start out with m_intersectsCoverageRect=false
        <https://webkit.org/b/145443>
        <rdar://problem/19685798>

        Reviewed by Simon Fraser.

        Add a test (based on iframe-and-layers.html) that makes an iframe with compositing